my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EARGD/T_EARGD-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EARGD_STRUCT_H
#define T_EARGD_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EARGD(void);


#endif /* not T_EARGD_STRUCT_H */
